--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -281,11 +281,11 @@
                                                                 <rect key="frame" x="104" y="0.0" width="103" height="87.5"/>
                                                                 <color key="backgroundColor" name="ButtonNumberColor"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                                <state key="normal" title="0">
+                                                                <state key="normal" title="0  .">
                                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </state>
                                                                 <connections>
-                                                                    <action selector="GetUserInput:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7iV-1Z-0bz"/>
+                                                                    <action selector="GetZeroInput:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Exw-pE-mPS"/>
                                                                 </connections>
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rvY-Sj-K51">
@@ -294,12 +294,12 @@
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="87.5" id="N9V-wx-cOy"/>
                                                                 </constraints>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                                <state key="normal" title=".">
+                                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                                <state key="normal" title="+/-">
                                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </state>
                                                                 <connections>
-                                                                    <action selector="AddDecimal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="617-NO-8uK"/>
+                                                                    <action selector="ChangeSignNumber:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MLF-Ja-EpN"/>
                                                                 </connections>
                                                             </button>
                                                         </subviews>
@@ -343,6 +343,7 @@
                         <outlet property="deleteBtn" destination="MKZ-Et-5ax" id="eQ4-bi-hwn"/>
                         <outlet property="displayLabel" destination="2qq-SL-t6E" id="fp8-MS-z7r"/>
                         <outlet property="tableView" destination="esD-LW-scx" id="h1s-or-YDc"/>
+                        <outlet property="zeroBtn" destination="pEl-EG-VMh" id="EAM-wI-OPP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
